--- a/.github/workflows/tagged-release.yml
+++ b/.github/workflows/tagged-release.yml
@@ -48,7 +48,7 @@ jobs:
     - name: "GH Release"
       run: |
         TAG=${GITHUB_REF#refs/tags/}
-        zip ./version2-dll.zip ./Version2/bin/Release/netstandard2.0/publish/Version2.dll
+        zip ./version2-dll.zip ./Version2/bin/Release/netstandard2.0/linux-x64/publish/Version2.dll
         gh release create $TAG ./version2-dll.zip --notes $TAG
       env:
         GITHUB_TOKEN: ${{ github.TOKEN }}
